--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -75,7 +75,7 @@ html[xmlns] .flexslider .slides {
 .flexslider {
   margin: 0 0 60px;
   background: #ffffff;
-  border: 12px solid #beb078;
+  border: 12px solid #333;
   position: relative;
   zoom: 1;
   /*-webkit-border-radius: 4px;
