--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -440,7 +440,7 @@ h5 {
 
 p {
   font-family: Helvetica, sans-serif;
-  font-weight: 100;
+  font-weight: 400;
   font-size: 100%;
   color: #333;
   line-height: 1.4; }
@@ -476,7 +476,7 @@ p {
   margin-top: 320px; }
 
 #ueberUns p {
-  border: 12px solid #beb078;
+  border: 12px solid #333;
   padding: 50px 30px 50px 30px;
   margin-top: 120px; }
 
@@ -513,9 +513,21 @@ p {
 .article {
   margin-top: 120px; }
 
+#pflastersteine h2 {
+  color: #333;
+  margin-top: 5%;
+  margin-bottom: 5%; }
+
 .description {
-  float: left;
-  display: inline-block; }
+  float: right;
+  margin: auto;
+  padding: 35px;
+  border-left: 12px solid #333;
+  height: 640px; }
+
+.flexslider h4 {
+  margin-top: 2%;
+  margin-bottom: 5%; }
 
 /*---------------------------------------------------
   Parallax Cubes
