--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -58,7 +58,7 @@ h5{
 
 p{
 	font-family: $base-font-family;
-	font-weight: $light;
+	font-weight: $medium;
 	font-size: $font-size-p;
 	color: $grey;
 	line-height: 1.4;
@@ -102,7 +102,7 @@ p{
 }
 
 #ueberUns p{
-	border: 12px solid $gold;
+	border: 12px solid $grey;
 	padding: 50px 30px 50px 30px;
 	margin-top: 120px;
 }
@@ -145,6 +145,26 @@ p{
 .article{
 	margin-top: 120px;
 }
+
+#pflastersteine h2{
+	color: $grey;
+	margin-top: 5%;
+	margin-bottom: 5%;
+}
+
+.description{
+	float: right;
+ 	margin: auto;
+ 	padding: 35px;
+ 	border-left: 12px solid $grey;
+ 	height: 640px;
+}
+
+.flexslider h4{
+	margin-top: 2%;
+	margin-bottom: 5%;
+}
+
 
 /*---------------------------------------------------
   Parallax Cubes
