--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -49,8 +49,8 @@
   -webkit-backface-visibility: hidden;
 }
 .flexslider .slides img {
-  max-width: 100%;
-  display: block;
+  //max-width: 100%;
+  //display: block;
 }
 .flexslider .slides:after {
   content: "\0020";
