--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -165,6 +165,30 @@ p{
 	margin-bottom: 5%;
 }
 
+.slides img{
+	display: inline;
+	float: left;
+	max-width: 58.333%;
+}
+
+.flex-caption button{
+	border: 5px solid $grey;
+	margin-top: 50%;
+	background-color: #fff;
+	color: $grey;
+	font-size: $font-size-button;
+	font-weight: $bold;
+	width: 100%;
+	padding: 2%;
+}
+
+.flex-caption button:hover{
+	border-color: $gold;
+	color: $gold;
+	cursor: pointer;
+}
+
+
 
 /*---------------------------------------------------
   Parallax Cubes
