--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -549,6 +549,19 @@ p {
   color: #beb078;
   cursor: pointer; }
 
+#transportbeton {
+  margin: 0px;
+  width: 100%;
+  height: 800px;
+  background-color: #333; }
+
+#transportbeton p {
+  color: #fff;
+  margin-top: 40%; }
+
+#transportbeton h2 {
+  margin-top: 10%; }
+
 /*---------------------------------------------------
   Parallax Cubes
 ---------------------------------------------------*/
